--- a/Front-End/src/index.html
+++ b/Front-End/src/index.html
@@ -5,6 +5,7 @@
   <title>Homes</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.cdnfonts.com/css/barbie" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
