--- a/Front-End/src/index.html
+++ b/Front-End/src/index.html
@@ -10,5 +10,6 @@
 </head>
 <body>
   <app-root></app-root>
+  <script src="https://cdn.jsdelivr.net/gh/cnumr/ecoindex_badge@3/assets/js/ecoindex-badge.js" defer></script>
 </body>
 </html>
